[gd_scene load_steps=19 format=3 uid="uid://cp2q7vkeewcp1"]

[ext_resource type="Script" path="res://gameObjects/enemies/fly/fly.gd" id="1_c1w08"]
[ext_resource type="Texture2D" uid="uid://ce61w072tsfma" path="res://art/Enemies/enemies x1.png" id="2_r7a8l"]
[ext_resource type="Shader" path="res://gameObjects/enemies/enemy.gdshader" id="2_rbv2l"]
[ext_resource type="AudioStream" uid="uid://cb1c4jf44tn77" path="res://sfx/SCI-FI_UI_SFX_PACK/Rings/Ring_Pitched_Up_1.wav" id="4_ysoc4"]
[ext_resource type="AudioStream" uid="uid://dottqtblxu13n" path="res://sfx/Space_Ambience_and_Sound_Pack/Custom/flies-buzzing.wav" id="5_1ot3q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k3rb3"]
resource_local_to_scene = true
shader = ExtResource("2_rbv2l")
shader_parameter/flash_white = false

[sub_resource type="AtlasTexture" id="AtlasTexture_3dv3p"]
atlas = ExtResource("2_r7a8l")
region = Rect2(0, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t13o6"]
atlas = ExtResource("2_r7a8l")
region = Rect2(32, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgxh5"]
atlas = ExtResource("2_r7a8l")
region = Rect2(64, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0owv"]
atlas = ExtResource("2_r7a8l")
region = Rect2(96, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iyo4"]
atlas = ExtResource("2_r7a8l")
region = Rect2(160, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gx8f"]
atlas = ExtResource("2_r7a8l")
region = Rect2(0, 1088, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n64t"]
atlas = ExtResource("2_r7a8l")
region = Rect2(32, 1088, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cupf0"]
atlas = ExtResource("2_r7a8l")
region = Rect2(64, 1088, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jahtk"]
atlas = ExtResource("2_r7a8l")
region = Rect2(96, 1088, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jrrse"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dv3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t13o6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgxh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0owv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iyo4")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gx8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n64t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cupf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jahtk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yko36"]
radius = 12.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iot8i"]
radius = 13.0

[node name="fly" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 39
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_c1w08")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_k3rb3")
sprite_frames = SubResource("SpriteFrames_jrrse")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_yko36")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_path_custom_color = Color(0.611765, 0.0745098, 0, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="attackBox" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackBox"]
shape = SubResource("CircleShape2D_iot8i")

[node name="SFX" type="Node" parent="."]

[node name="hitSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_ysoc4")
max_distance = 1000.0
attenuation = -1.0

[node name="idleSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_1ot3q")
volume_db = -40.0
max_distance = 1000.0
attenuation = -1.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="attackBox" to="." method="_on_attack_box_body_entered"]
